<resources>
    <string name="app_name">SkeletalDiagnosis</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_label">Home</string>
    <string name="diagnosis_label">Diagnosis</string>
    <string name="credit_label">Credit</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">診断スタート</string>
    <string name="credit">クレジット</string>
    <string name="coordinate">おすすめコーデをみる</string>
    <string name="top_logo">トップロゴ</string>
    <string name="credit_text">クレジット</string>
    <string name="credit_to_home_back_button">戻る</string>
    <string name="reference_site_text">参考にさせていただいたサイト</string>
    <string name="first_url">https://ameblo.jp/hiroyuki-m01/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_text">本日のおすすめコーデ</string>
    <string name="ok">OK</string>
    <string name="diagnosis_end_text">以上で質問は終了です。\nただいま、回答をもとに診断結果を\n判定しています。\nあなたの診断結果がお手元に届くまで、\n動画をご覧になってお待ちください。</string>
    <string name="question_text">Q1.あなたの体格に一番近いのは？</string>
    <string name="straight_choice_question">身体が厚く立体的</string>
    <string name="wave_choice_question">身体は薄くスタイリッシュで線が柔らかい</string>
    <string name="natural_choice_question">骨格のフレームが目視でき、各関節が大きい</string>
    <string name="result_text">あなたの骨格は...\n %1$sタイプ　です</string>
    <string name="strong_item_text">得意アイテム</string>
    <string name="weakness_item_text">苦手アイテム</string>
    <string name="straight_item_comment_text">厚みのあるボディ自体がファッション要素となり、シンプルなアイテムが輝きを放ちます。キレイ目なアイテムとの相性抜群。\n素でボリュームがあるため、ボリュームのあるアイテムやピッチリしたアイテムを着用してしまうと肉感が強調され、太って見えてしまいます。\n</string>
    <string name="wave_item_comment_text">上半身が華奢気味なため、立体感をだせるアイテムがよく似合います。ショート丈を着用することで、ウェーブタイプ特有の下重心が上がって見え、スタイルアップが狙えます。\nしかし、上半身にシンプルなアイテムを着用すると、少し貧相に見えてしまいます。\n</string>
    <string name="natural_item_comment_text">線の細い身体をカバーできる厚みのあるアイテムがうってつけです。細身のパンツで脚のラインを活かすこともワイドパンツを着用してボリュームをだすことも自由自在。\nしかし、胸元の開いたトップスや丈の短いパンツは貧相に見えてしまうため避けた方が無難。\n</string>
    <string name="strong_material_text">得意素材</string>
    <string name="weakness_material_text">苦手素材</string>
    <string name="straight_material_comment_text">ハリ感があり、自然な光沢がある素材がよく似合います。フラットな素材との相性が良いですが、素材が薄すぎると肉感を拾ってしまい、厚すぎると着太りしてしまうためNG\n薄すぎず厚すぎない丁度いい素材を選びましょう。\n</string>
    <string name="wave_material_comment_text">ソフトな素材やハイゲージなどがおすすめ。素材に厚みがあると重たく見え、悪目立ちしてしまいます。\nなるべく薄めのものを選び、コンパクトにまとめることを意識しましょう。\n</string>
    <string name="natural_material_comment_text">硬めの肌質に合わせたナチュラルな風合いの天然素材がベスト。ポリエステルなどの光沢が強い素材は安っぽく見えてしまいます。\n素材が薄すぎるとナチュラルタイプ特有の骨っぽさが目立つため、やや厚みのある素材でカバーするのが賢い選択。\n</string>
    <string name="strong_pattern_text">得意柄</string>
    <string name="straight_pattern_comment_text">キーワードは直線。シンプルイズベストを念頭に柄を選ぶといいでしょう。また、なるべくうるさくならない配色の組み合わせだとさらに似合います。\nしかし、柄は骨格以外の要因も関係してくるため、あくまで目安です。\n</string>
    <string name="wave_pattern_comment_text">キーワードは小さめの柄。ストライプやチェックは細かめのものを選びましょう。曲線的なボディに合わせ、同じく曲線的なドット柄なども似合います。\nしかし、柄は骨格以外の要因も関係してくるため、あくまで目安です。\n</string>
    <string name="natural_pattern_comment_text">キーワードは大き目の柄。柄の大きさが悪目立ちせず、その存在感を利用できるため得意です。ペイズリーなどのランダムな柄も着こなすことができます。\nしかし、柄は骨格以外の要因も関係してくるため、あくまで目安です。\n</string>
    <string name="bone_type_description_text">ストレートタイプの特徴</string>
    <string name="straight_description_comment_text">
        他タイプに比べ\n\n
        ・肌質は筋肉質でハリがある\n
        ・厚みがあり立体感がある\n
        ・真ん中重心　ジャストウエストで合わせる\n
        ・指がやや短め\n
        ・手首を側面から見た時に、楕円型ではなく厚みがあり丸い\n
        ・鎖骨が目立たない\n
        ・首があまり長くない\n\n
        等がストレートタイプにはあります。\n\n
        ストレートタイプ＜持ちやすい悩み＞\n\n
        ・ボディの立体感から、着太りしやすくなる\n
        ・首が短めの為、ハイネックを選ぶのが難しい\n
        ・フィットをさせても身体の肉感を拾ってしまう\n
        ・逆にゆるいサイズを着ると、厚みに更にボリュームがのりより着太りしてしまう。\n
        ・フィットさせすぎず、ゆるすぎない\n\n
        ＜付かず離れず＞\nIラインシルエットがスタイルを良く見せる為の最重要ポイントとなります。\n</string>
    <string name="wave_description_comment_text">
        他タイプに比べ\n\n
        ・肌質は柔らかい、ソフトな質感\n
        ・身体に厚みがなく、平面的\n
        ・上半身は華奢気味、下半身に脂肪がつきやすい\n
        ・腰の位置が低く、下半身に重心がある\n
        ・手首が薄い\n
        ・首が長い\n
        ・ウエストは細いが、ヒップから太ももにかけて肉付きがいい\n\n
        等がウェーブタイプにはあります。\n\n
        ウェーブタイプ＜持ちやすい悩み＞\n\n
        ・胸元の開いたトップスが苦手\n
        ・O脚、脚が短め\n
        ・下半身太りしやすい\n
        ・身体が薄い\n
        ・上半身をある程度フィットさせてコンパクトさを演出、下半身は肉感を拾わない細身テーパードなどが◎\n\n
        ＜程よいフィット感でコンパクトなシルエット＞\nIラインシルエットがスタイルを良く見せる為の最重要ポイントとなります。\n</string>
    <string name="natural_description_comment_text">
        他タイプに比べ\n
        ・関節や骨が目立つ\n
        ・肌質は硬めな質感\n
        ・身体の厚みは平面的だが、たまに厚めな人も\n
        ・肩幅が広く、肩が目立つ\n
        ・腰位置が高く、重心も高め\n
        ・手首が薄い\n
        ・首が長い人が多い\n
        ・鎖骨や肩甲骨が出張っており、骨感がする\n
        ・ヒップが薄くて長い\n\n
        等がナチュラルタイプにはあります。\n\n
        ナチュラルタイプ＜持ちやすい悩み＞\n\n
        ・胸元の開いたトップスが苦手\n
        ・骨っぽさが気になる\n
        ・身体が薄い\n
        ・線が細い\n\n
        ＜ボリュームを出しラインの細さをカバー＞\nAもしくはYラインシルエットがスタイルを良く見せる為の最重要ポイントとなります。\n</string>
    <string name="one_point_advice_text">ワンポイントアドバイス</string>
    <string name="straight_one_point_advice_comment_text">
        似合わせる為のポイントは\n\n
        ①薄すぎず厚すぎない、ハリのある素材\n
        ②付かず離れずのIラインシルエット\n
        ③小物等で立体感を出しすぎず\n
        ④引き算を意識してシンプルに\n\n
        以上のことに注意してスタイリングするといいでしょう。\n</string>
    <string name="wave_one_point_advice_comment_text">
        似合わせる為のポイントは\n\n
        ①厚すぎないソフトな素材\n
        ②ややフィットする程度に抑え、コンパクトなシルエットを目指す\n
        ③ややスッキリした丈で重心を上げる\n
        ④トップスは重ね着をして足し算を意識\n\n
        以上のことに注意してスタイリングするといいでしょう。\n</string>
    <string name="natural_one_point_advice_comment_text">
        似合わせる為のポイントは\n
        ①薄すぎない素材\n
        ②ゆとりをもたせ、ボリュームを出すシルエット\n
        ③重心を上げない\n
        ④重ね着や小物を活用して華奢な上半身をカバー\n\n
        以上のことに注意してスタイリングするといいでしょう。\n</string>
    <string name="to_home_button">ホームへ</string>
    <string name="to_recommend_outfit_button">おすすめコーデ</string>
    <string name="to_day_recommend_outfit">本日のおすすめコーデイメージ</string>
    <string name="cushion_empty_text">\n\n\n\n\n</string>
    <string name="dialog_title">骨格タイプを選択してください</string>
    <string name="dialog_close">閉じる</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>