<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCEC"
    tools:context=".Credit">

    <Button
        android:id="@+id/toRecommendOutfitButton"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginEnd="4dp"
        android:shadowColor="#613030"
        android:shadowDx="7"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/to_recommend_outfit_button"
        android:textColor="#B4A531"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FD9727"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/toHomeButton"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:shadowColor="#613030"
        android:shadowDx="7"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/to_home_button"
        android:textColor="#B4A531"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#89E85C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toRecommendOutfitButton"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/result_text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/strongItemText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/strong_item_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/strongItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/strongItemLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/strongItemLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <TextView
                android:id="@+id/weaknessItemText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/weakness_item_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/weaknessItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/weaknessItemLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weaknessItemLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <TextView
                android:id="@+id/itemCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/straight_item_comment_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/strongMaterialText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/strong_material_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/strongMaterialDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/strongMaterialLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/strongMaterialLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <TextView
                android:id="@+id/weaknessMaterialText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/weakness_material_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/weaknessMaterialDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/weaknessMaterialLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weaknessMaterialLayout02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        </LinearLayout>

            <TextView
                android:id="@+id/materialCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/straight_material_comment_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/strongPatternText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/strong_pattern_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/strongPatternDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/strongPatternLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/strongPatternLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

            <TextView
                android:id="@+id/patternCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/straight_pattern_comment_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/boneTypeDescriptionText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/bone_type_description_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/boneTypeDescriptionDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/boneTypeDescriptionCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/straight_description_comment_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/onePointAdviceText"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:text="@string/one_point_advice_text"
                android:textSize="24sp" />

            <View
                android:id="@+id/onePointAdviceDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/onePointAdviceCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/straight_one_point_advice_comment_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cushionEmptyText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cushion_empty_text"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>