<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcec"
    tools:context=".Home">

    <ImageView
        android:id="@+id/topLogo"
        android:layout_width="420dp"
        android:layout_height="308dp"
        android:contentDescription="@string/top_logo"
        android:scaleType="fitXY"
        android:src="@drawable/homelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/diagnosisStartButton"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:shadowColor="#613030"
        android:shadowDx="7"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/start"
        android:textColor="#B4A531"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#BAEC39"
        app:layout_constraintBottom_toTopOf="@+id/outfitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLogo"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/outfitButton"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:shadowColor="#613030"
        android:shadowDx="7"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:layout_marginBottom="124dp"
        android:text="@string/coordinate"
        android:textColor="#B4A531"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FD9727"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLogo"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/creditButton"
        android:layout_width="186dp"
        android:layout_height="51dp"
        android:shadowColor="#613030"
        android:shadowDx="7"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/credit"
        android:textColor="#B4A531"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FDD227"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outfitButton"
        app:layout_constraintVertical_bias="0.284" />

</androidx.constraintlayout.widget.ConstraintLayout>